logs/nekbot.plugins.weather.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/cookies-2.2.1.dist-info'...
Listing './lib/python3.5/site-packages/forecastio'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/nekbot'...
Listing './lib/python3.5/site-packages/nekbot/conf'...
Listing './lib/python3.5/site-packages/nekbot/conf/locale'...
Listing './lib/python3.5/site-packages/nekbot/conf/locale/es'...
Listing './lib/python3.5/site-packages/nekbot/conf/locale/es/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/nekbot/conf/plugin_template'...
Listing './lib/python3.5/site-packages/nekbot/conf/plugin_template/nekbot'...
Listing './lib/python3.5/site-packages/nekbot/conf/plugin_template/nekbot/plugins'...
Listing './lib/python3.5/site-packages/nekbot/conf/plugin_template/nekbot/plugins/plugin_template'...
Listing './lib/python3.5/site-packages/nekbot/conf/project_template'...
Listing './lib/python3.5/site-packages/nekbot/conf/project_template/plugins'...
Listing './lib/python3.5/site-packages/nekbot/conf/project_template/storage'...
Listing './lib/python3.5/site-packages/nekbot/core'...
Listing './lib/python3.5/site-packages/nekbot/core/commands'...
Listing './lib/python3.5/site-packages/nekbot/core/permissions'...
Listing './lib/python3.5/site-packages/nekbot/core/types'...
Listing './lib/python3.5/site-packages/nekbot/plugins'...
Listing './lib/python3.5/site-packages/nekbot/plugins/weather'...
Listing './lib/python3.5/site-packages/nekbot/protocols'...
Listing './lib/python3.5/site-packages/nekbot/protocols/base'...
Listing './lib/python3.5/site-packages/nekbot/storage'...
Listing './lib/python3.5/site-packages/nekbot/utils'...
Compiling './lib/python3.5/site-packages/nekbot/utils/modules.py'...
***   File "./lib/python3.5/site-packages/nekbot/utils/modules.py", line 18
    print traceback.format_exc()
                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/nekbot-0.1.2.34.egg-info'...
Listing './lib/python3.5/site-packages/nekbot.plugins.weather-0.2.0.5.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/python_forecastio-1.3.5.egg-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests-2.18.4.dist-info'...
Listing './lib/python3.5/site-packages/responses-0.8.1.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/tests'...
Listing './lib/python3.5/site-packages/tests/argparse_tests'...
Listing './lib/python3.5/site-packages/tests/types'...
Listing './lib/python3.5/site-packages/tests/utils_strings'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
